# DL-Models-Collection

./: .gitignore  README.md  pyproject.toml
GPT/: GPT.ipynb  pyproject.toml
ResNet/: CIFAR-10ダウンロード.ipynb  README.md  ResNet再現実装.ipynb
ResNet/logs/: events.out.tfevents.1751971071.DESKTOP-P0RINDH.43782.0  events.out.tfevents.1752021112.DESKTOP-P0RINDH.5254.0  events.out.tfevents.1752023299.DESKTOP-P0RINDH.12117.0
ResNet/logs/Error_test_err/: events.out.tfevents.1751971181.DESKTOP-P0RINDH.43782.2  events.out.tfevents.1752021218.DESKTOP-P0RINDH.5254.2  events.out.tfevents.1752023406.DESKTOP-P0RINDH.12117.2
ResNet/logs/Error_train_err/: events.out.tfevents.1751971181.DESKTOP-P0RINDH.43782.1  events.out.tfevents.1752021218.DESKTOP-P0RINDH.5254.1  events.out.tfevents.1752023406.DESKTOP-P0RINDH.12117.1
